<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/hello_geekbrains"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/name"
        android:textColor="@color/design_default_color_primary"
        android:textSize="34sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/design_default_color_surface"
        android:textColorHighlight="@color/purple_200"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <Switch
        android:id="@+id/switch1"
        style="?attr/switchStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="48dp"
        android:switchTextAppearance="?android:attr/switchPreferenceStyle"
        android:text="@string/Switch"
        android:layout_gravity="center"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/checkbox"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/togglebutton"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />
</LinearLayout>